--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "gcp_express_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node",
+    "watch": "nodemon server.ts",
+    "create-tables": "ts-node create-tables.ts"
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,22 @@
   },
   "homepage": "https://github.com/juliusoh/gcp_express_server#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "axios": "^0.24.0",
+    "cron": "^1.8.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "express-pino-logger": "^7.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "mysql2": "^2.3.3",
+    "node-cron": "^3.0.0",
+    "pino": "^7.6.2",
+    "sequelize": "^7.0.0-alpha.3"
   }
 }
