--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-PORT=5000
+$PORT=5000
 SQL_DATABASE=mydb
+SQL_HOST=35.227.190.120
 SQL_USER=julius
 SQL_PASSWORD=korea
 SQL_HOST=/cloudsql/sada-u-4:us-west1:sada-u-4
